added dark elf and adventurer

--- a/output.html
+++ b/output.html
@@ -12,6 +12,8 @@
 <li><a href="#barbarian">Barbarian</a></li>
 <li><a href="#paladin">Paladin</a></li>
 <li><a href="#anti-paladin">Anti-Paladin</a></li>
+<li><a href="#dark-elf">Dark Elf</a></li>
+<li><a href="#adventurer">Adventurer</a></li>
 <li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#manifest-of-the-mundane">Manifest of the Mundane</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
@@ -198,6 +200,7 @@ You will need to install two command line programs. Python-markdown (<a href="ht
 </section>
 <section class="">
 <h2 id="barbarian"><strong>Barbarian</strong></h2>
+<p>A Warrior with no mighty deed and a natural AC bonus that is modified by the Armor Check penalty. Berserker mode adds a random element and removes some player agency.  The barbarian’s, action dice, and fort save is slightly better than the warrior while the will save and attack bonus are decreased.</p>
 <p><strong>Hit points:</strong> 1d12 hit points per level</p>
 <p><strong>Weapon training:</strong> A barbarian is trained in the use of these weapons:
 battleaxe, club, crossbow, dagger, handaxe, javelin, longsword, mace,
@@ -216,9 +219,8 @@ make yourself angrier and more likely to go berserk). The player may
 burn a point of Intelligence to avoid entering Berserker Mode.</p>
 <p><strong>Berserker</strong>: When facing a threat and rolling the maximum value on the
 berserker die, the barbarian goes berserk until their are no reachable
-enemies or he/she burns 2 points of intelligence. A berserk barbarian
-adds their level to their armor class. The barbarian gains an additional
-action die -1d on the dice chain from their current lowest action die.
+enemies or they burns 2 points of intelligence. A berserk barbarian adds their Fort save to their armor class. The barbarian gains an additional
+action die -1d on the dice chain from their highest action die.
 This action may be used during the current round.</p>
 <p>Going berserk imposes the following additional modifiers to saving
 throws; +2 Fort, +2 Reflex, -2 Will.</p>
@@ -235,7 +237,7 @@ roll that goes berserk must be against a real threat.</p>
 <li>Flex</li>
 </ol>
 <p><strong>See Red:</strong> Burn personality to Increase attack, damage and crit rolls
-for 1 round/level. Your armor class is reduced by the same amount.</p>
+for 1 round. Your armor class is reduced by the same amount.</p>
 <h3 id="barbarian-table"><strong>Barbarian Table</strong></h3>
 <table>
 <thead>
@@ -419,6 +421,48 @@ for 1 round/level. Your armor class is reduced by the same amount.</p>
 <p><strong>Lay On Hands</strong>, is replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18).</p>
 <p><strong>Turn Unholy</strong> effects the same creatures as a lawful Cleric, but makes them your slaves. Use the <em>Turn Unholy</em> table but, the turned fight for you for the amount of time listed. Additionally, the recently deceased rise as well though their stats are usually poor. PCs are not deceased until they a fail <em>roll the body</em> check. Combine with <em>Death Touch</em> for more fun.</p>
 <p><strong>Fickle Master</strong>: The Anti-Paladin&rsquo;s natural disapproval level is 2 and they use a d5 when rolling on the disapproval table.</p>
+</section>
+<section class="">
+<h2 id="dark-elf"><strong>Dark Elf</strong></h2>
+<p><strong>Design notes</strong></p>
+<p>A subclass of Elf that is Thief/Wizard rather than Warrior/Wizard. Has
+spells and Thief skills but both are a bit nerfed. Most items below are
+the lesser of the two between Elf and Thief. Can use luck to aid magic
+but cannot really use spellburn (the dark elf&rsquo;s corrupt body does not
+help with spells).</p>
+<p><strong>Attack</strong> as Thief</p>
+<p><strong>Action Dice</strong> as Thief</p>
+<p><strong>Crit die/table</strong> as Elf</p>
+<p><strong>Spells Known</strong> as Elf -2 and no automatic Patron Bond/Invoke Patron</p>
+<p><strong>Thief Skills</strong> as Thief -1 except <em>Read From Scroll</em> as Elf</p>
+<p><strong>Caster Level</strong> -1</p>
+<p><strong>Saving Throws</strong> as Thief</p>
+<p><strong>Luck Die</strong> 1:1 at first level and then as Thief -d1 thereafter.</p>
+<p><strong>Spellburn</strong> Spellburn damage is permanent.</p>
+<p><strong>Corruption</strong> -d1 (d8) when rolling for corruption or patron taint.
+Luck burned to change rolls or avoid corruption is permanent.</p>
+<p><strong>Heal Luck</strong> as Thief</p>
+<p><strong>Thieves&rsquo;Cant </strong>No but does know a Dark Elf dialect of Elven that has a
+DC 15 Int check chance of being understood by an Elf. Standard Elven is
+the most likely third language known and DC 15 to understand if not.</p>
+<p><strong>Vulnerability</strong> Prolonged contact with iron causes 4hp damage per day
+and -1d on all rolls. Damage from iron weapons causes an additional 1d3
+points of damage.</p>
+</section>
+<section class="">
+<h2 id="adventurer"><strong>Adventurer</strong></h2>
+<p><strong>Design Notes</strong></p>
+<p>Warrior/Thief. Just combined the two and nerfed them both.</p>
+<p><strong>HD</strong> 1d10</p>
+<p><strong>Attack</strong> +1 at first level (no deed) and as Warrior -1d thereafter.</p>
+<p><strong>Crit die/Table</strong> as Dwarf</p>
+<p><strong>Threat Range</strong> as Warrior</p>
+<p><strong>Saving Throws</strong> as Warrior</p>
+<p><strong>Thief Skill</strong> as Thief -1</p>
+<p><strong>Luck Die</strong> No Luck die. Ratio based on Reflex save (ie. 2:1 at 4th
+level).</p>
+<p><strong>Heal Luck</strong> as Thief.</p>
+<p><strong>Thieves&rsquo;Cant </strong>No</p>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
