--- a/output.html
+++ b/output.html
@@ -31,6 +31,7 @@
 <li>Chris Messemore</li>
 <li>Daniel Beltran</li>
 <li>Dave Campbell</li>
+<li>Kevin Olmstead</li>
 </ul>
 <p><a rel="license"
      href="http://creativecommons.org/publicdomain/zero/1.0/">
@@ -46,7 +47,9 @@
 You can see some of the text I typed below.  This is what I typed to create the beginning of the following chapter.</p>
 <pre>
 &lt;section markdown="1"&gt;
+
 ## Ranger
+
 You are gristled loner raised by bears, a storied hunter and tracker, a camoflouged predator shooting from the bush. 
 Rangers are warriors of the forest. What they lack in hit points, they make up for in luck and skill.
 
@@ -371,9 +374,8 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <h2 id="paladin">Paladin</h2>
 <p>Everything as Cleric except the following.</p>
 <ul>
-<li>HD 1d10</li>
 <li>Attack +1 at first level and as Warrior with Mighty Deeds -d1 thereafter</li>
-<li><strong>Higher Standards</strong>. Disapproval Level begins at 2</li>
+<li><strong>Higher Standards</strong>. Disapproval Level begins at 3</li>
 <li>Weapon training as warrior</li>
 <li>Spells Known -1 per level</li>
 <li>Lucky Weapon as warrior</li>
@@ -420,16 +422,12 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 <p>As above but must wear black and…</p>
 <p><strong>Lay On Hands</strong>, is replaced with <em>Death Touch</em> (<em>DCC Annual</em>, #1, Pg 18).</p>
 <p><strong>Turn Unholy</strong> effects the same creatures as a lawful Cleric, but makes them your slaves. Use the <em>Turn Unholy</em> table but, the turned fight for you for the amount of time listed. Additionally, the recently deceased rise as well though their stats are usually poor. PCs are not deceased until they a fail <em>roll the body</em> check. Combine with <em>Death Touch</em> for more fun.</p>
-<p><strong>Fickle Master</strong>: The Anti-Paladin&rsquo;s natural disapproval level is 2 and they use a d5 when rolling on the disapproval table.</p>
+<p><strong>Fickle Master</strong>: Anti-Paladin&rsquo;s use a d5 when rolling on the disapproval table.</p>
 </section>
 <section class="">
 <h2 id="dark-elf"><strong>Dark Elf</strong></h2>
-<p><strong>Design notes</strong></p>
-<p>A subclass of Elf that is Thief/Wizard rather than Warrior/Wizard. Has
-spells and Thief skills but both are a bit nerfed. Most items below are
-the lesser of the two between Elf and Thief. Can use luck to aid magic
-but cannot really use spellburn (the dark elf&rsquo;s corrupt body does not
-help with spells).</p>
+<p>Depending on who you ask, the Dark Elves are the corrupt, outcasts of the high elves or the true carriers of the Elven lineage. What they lack in martial prowess is made up for by their abilities as rogues and assassins. </p>
+<p>Dark Elves can heal luck and use it to cast spells, but cannot spellburn except at great cost. Burning Stats other than luck causes permanent damage.</p>
 <p><strong>Attack</strong> as Thief</p>
 <p><strong>Action Dice</strong> as Thief</p>
 <p><strong>Crit die/table</strong> as Elf</p>
@@ -659,27 +657,24 @@ With their pipe lit the halfling may use an action to add a little herbal supple
 </ol>
 <h3 id="a-door">A Door</h3>
 <ol>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Wooden, with a simple lock</li>
+<li>Banded iron, barred from one side (probably not this side)</li>
+<li>Metal with a warded lock and a grated peephole</li>
+<li>False, exploding</li>
+<li>Lacks a doorknob, instead sports a barbed metal spike, opens only to those willing to make a blood sacrifice</li>
+<li>One-third normal height, passing through shrinks all to 1/3 height; passing back through reverses the effect</li>
+<li>Intricately carved with bas relief images that look disoncertingly lifelike</li>
+<li>Not a door at all, just a bead curtain covering a doorway</li>
+<li>Wood, rotten from some kind of fungus, take care not to get any on you</li>
+<li>Magical, will only open to the magic word</li>
+<li>Intelligent, must be reasoned with to open</li>
+<li>A blackened metal slab with hinges ruined by intense heat. The door is festooned with chains and locks, covered in protective runes, and bound with strong magic.
+13, A regular-sized door with a tiny door inset. When opened they lead to different locations</li>
 </ol>
 </section>
 <section>
 <h2 id="slurm-priest">Slurm Priest</h2>
 <p><strong>Slurm Priest:</strong> Init +2; Atk bite +4 ranged 10&rsquo; (1d6 + swallow), Vomit Puss Grubin +3 ranged 40’ (area effect); AC 14; HD 4d8; hp 18; MV 25&rsquo;; Act 1d20 + 1d16; SP disgust, swallow, vomit, defecate; SV Fort +5, Ref +0, Will +3; AL C.</p>
-<p>This upright, purple worm loves jewelry and profanity. It is always found with the <em>Slime Grubins</em> it has excreted. 
-A supplicant of its chaos lord, the Slurm Priest is often called to test the forces of Law. </p>
 <p><strong>Disgust:</strong> Any human in a 5’ range must make a fort save each round or lose a round. Demihumans are immune. </p>
 <p><strong>Swallow:</strong> If bite successful; DC 15 Strength check or be half swallowed.
 The character will be upside down in the slurm&rsquo;s mouth with arms pinned at the waist and legs kicking.
