--- a/croak.html
+++ b/croak.html
@@ -390,14 +390,189 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </section>
 <section class="">
 <h2 id="paladin">Paladin</h2>
-<p>Everything as Cleric except the following.</p>
+<p>The anointed warrior. Paladins may use <em>Mighty Deeds</em> and the all of the powers of the cleric. Though, at some cost.</p>
+<p><strong>Hit points:</strong> 1d10/level</p>
+<p><strong>Magic:</strong> See Cleric.</p>
+<p><strong>Higher standards:</strong> The paladin&rsquo;s disapproval level begins at 3 each day.</p>
+<p><strong>Lucky weapon:</strong> A paladin may choose a weapon which receives his original luck modifier.</p>
+<p><strong>Mighty Deeds;</strong> A paladin may use <em>mighty deeds</em> as a warrior.</p>
 <ul>
-<li>Attack +1 at first level and as Warrior with Mighty Deeds -d1 thereafter</li>
-<li><strong>Higher Standards</strong>. Disapproval Level begins at 3</li>
-<li>Weapon training as warrior</li>
 <li>Spells Known -1 per level</li>
-<li>Lucky Weapon as warrior</li>
 </ul>
+<table>
+<thead>
+<tr>
+<th>Lvl</th>
+<th>Atk</th>
+<th>Crit</th>
+<th>Act/Deed</th>
+<th>Ref</th>
+<th>Fort</th>
+<th>Will</th>
+<th>Spells</th>
+<th></th>
+<th></th>
+<th></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td>Die/Table</td>
+<td>Dice</td>
+<td></td>
+<td></td>
+<td></td>
+<td>1</td>
+<td>2</td>
+<td>3</td>
+<td>4</td>
+<td>5</td>
+</tr>
+<tr>
+<td>1</td>
+<td>+1</td>
+<td>1d10/III</td>
+<td>1d20</td>
+<td>+0</td>
+<td>+1</td>
+<td>+1</td>
+<td>4</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>2</td>
+<td>+d3</td>
+<td>1d12/III</td>
+<td>1d20</td>
+<td>+0</td>
+<td>+1</td>
+<td>+1</td>
+<td>5</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>3</td>
+<td>+d4</td>
+<td>1d14/III</td>
+<td>1d20</td>
+<td>+1</td>
+<td>+1</td>
+<td>+2</td>
+<td>5</td>
+<td>3</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>4</td>
+<td>+d5</td>
+<td>1d16/IV</td>
+<td>1d20</td>
+<td>+1</td>
+<td>+2</td>
+<td>+2</td>
+<td>6</td>
+<td>4</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>5</td>
+<td>+d6</td>
+<td>1d20/IV</td>
+<td>1d20</td>
+<td>+1</td>
+<td>+2</td>
+<td>+3</td>
+<td>6</td>
+<td>5</td>
+<td>2</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>6</td>
+<td>+d7</td>
+<td>1d24/V</td>
+<td>1d20+1d14</td>
+<td>+2</td>
+<td>+2</td>
+<td>+4</td>
+<td>7</td>
+<td>5</td>
+<td>3</td>
+<td>&ndash;</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>7</td>
+<td>+d8</td>
+<td>1d30/V</td>
+<td>1d20+1d16</td>
+<td>+2</td>
+<td>+3</td>
+<td>+4</td>
+<td>7</td>
+<td>6</td>
+<td>4</td>
+<td>1</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>8</td>
+<td>+d10+1</td>
+<td>1d30/V</td>
+<td>1d20+1d20</td>
+<td>+2</td>
+<td>+3</td>
+<td>+5</td>
+<td>8</td>
+<td>6</td>
+<td>5</td>
+<td>2</td>
+<td>&ndash;</td>
+</tr>
+<tr>
+<td>9</td>
+<td>+d10+2</td>
+<td>2d20/V</td>
+<td>1d20+1d20</td>
+<td>+3</td>
+<td>+3</td>
+<td>+5</td>
+<td>8</td>
+<td>7</td>
+<td>5</td>
+<td>3</td>
+<td>1</td>
+</tr>
+<tr>
+<td>10</td>
+<td>+d10+3</td>
+<td>2d20/V</td>
+<td>1d20+1d20</td>
+<td>+3</td>
+<td>+4</td>
+<td>+6</td>
+<td>9</td>
+<td>7</td>
+<td>6</td>
+<td>4</td>
+<td>2</td>
+</tr>
+</tbody>
+</table>
 <h3 id="mighty-deed-smite">Mighty Deed: Smite</h3>
 <p>Affects only the unholy or evil. Weapon bathed in holy light.</p>
 <table>
