--- a/croak_01.html
+++ b/croak_01.html
@@ -25,41 +25,22 @@
 <h3 id="contents_1">Contents</h3>
 <div class="toc">
 <ul>
-<li><a href="#contents_1">Contents</a></li>
-<li><a href="#contributors">Contributors</a></li>
 <li><a href="#autozinefier">AutoZinefier</a></li>
-<li><a href="#ranger">Ranger</a><ul>
-<li><a href="#ranger-table">Ranger Table</a></li>
-</ul>
-</li>
-<li><a href="#barbarian">Barbarian</a><ul>
-<li><a href="#barbarian-table">Barbarian Table</a></li>
-</ul>
-</li>
-<li><a href="#paladin">Paladin</a><ul>
-<li><a href="#mighty-deed-smite">Mighty Deed: Smite</a></li>
-</ul>
-</li>
-<li><a href="#anti-paladin">Anti-Paladin</a><ul>
-<li><a href="#paladin-anti-paladin-table">Paladin /Anti- Paladin Table</a></li>
-</ul>
-</li>
+<li><a href="#ranger">Ranger</a></li>
+<li><a href="#barbarian">Barbarian</a></li>
+<li><a href="#paladin">Paladin</a></li>
+<li><a href="#anti-paladin">Anti-Paladin</a></li>
 <li><a href="#dark-elf">Dark Elf</a></li>
-<li><a href="#halfling-pipeweed">Halfling Pipeweed</a><ul>
-<li><a href="#pipeweed-foraging-table">Pipeweed Foraging Table</a></li>
-</ul>
-</li>
+<li><a href="#halfling-pipeweed">Halfling Pipeweed</a></li>
 <li><a href="#slurm-priest">Slurm Priest</a></li>
 <li><a href="#slime-grubins">Slime Grubins</a></li>
 <li><a href="#mechanaut">Mechanaut</a></li>
 </ul>
 </div>
 <h3 id="contributors">Contributors</h3>
-<p>this is a test of the handwriting.</p>
 <p>Every contributor has waived copyright to their work. Anyone can use it for any purpose without attribution.</p>
 <ul>
 <li>Ariel Churi</li>
-<li>test</li>
 <li>Chris Messemore</li>
 <li>Daniel Beltran</li>
 <li>Dave Campbell</li>
@@ -404,7 +385,8 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </section>
 <section class="">
 <h2 id="paladin">Paladin</h2>
-<p>The anointed warrior. Paladins may use <em>Mighty Deeds</em> and all of the powers of the cleric.</p>
+<p>The anointed warrior. Paladins may use all of the powers of the cleric and <em>Mighty Deeds</em> upon reaching level 2. God&rsquo;s warrior is held to higher standards then most.</p>
+<p>The paladin uses the same table as the Anti-Paladin (see next).</p>
 <p><strong>Hit points:</strong> 1d10/level</p>
 <p><strong>Higher standards:</strong> The paladin&rsquo;s disapproval level begins at 3 each day.</p>
 <p><strong>Lucky weapon:</strong> A paladin may choose a weapon which receives his original luck modifier.</p>
@@ -446,6 +428,9 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 </tbody>
 </table>
+</section>
+<section class="clean">
+<p>Paladin Image</p>
 </section>
 <section class="">
 <h2 id="anti-paladin">Anti-Paladin</h2>
@@ -633,28 +618,241 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tbody>
 </table>
 </section>
+<section class="clean">
+<p>Anti-Paladin Image</p>
+</section>
 <section class="">
 <h2 id="dark-elf"><strong>Dark Elf</strong></h2>
 <p>Depending on who you ask, the Dark Elves are the corrupt, outcasts of the high elves or the true carriers of the Elven lineage. What they lack in martial prowess is made up for by their abilities as rogues and assassins. </p>
-<p>Dark Elves can heal luck and use it to cast spells, but cannot spellburn except at great cost. Burning Stats other than luck causes permanent damage.</p>
-<p><strong>Attack</strong> as Thief</p>
-<p><strong>Action Dice</strong> as Thief</p>
-<p><strong>Crit die/table</strong> as Elf</p>
-<p><strong>Spells Known</strong> as Elf -2 and no automatic Patron Bond/Invoke Patron</p>
-<p><strong>Thief Skills</strong> as Thief -1 except <em>Read From Scroll</em> as Elf</p>
-<p><strong>Caster Level</strong> -1</p>
-<p><strong>Saving Throws</strong> as Thief</p>
+<p>Dark Elves can heal 1 luck per day and use it to cast spells, but cannot spellburn except at great cost. Burning Stats other than luck causes permanent damage.</p>
+<p>Dark Elves share common elf traits such as infravision, a lucky spell, immunity to magical sleep and paralysis, and heigtened senses.</p>
+<p><strong>Spells Known</strong> as Elf -2 and no automatic Patron Bond/Invoke Patron.</p>
+<p><strong>Caster Level</strong> Dark elves cast at 1 less than their caster level.</p>
 <p><strong>Luck Die</strong> 1:1 at first level and then as Thief -d1 thereafter.</p>
-<p><strong>Spellburn</strong> Spellburn damage is permanent.</p>
+<p><strong>Spellburn</strong> Spellburn damage is permanent except for luck.</p>
 <p><strong>Corruption</strong> -d1 (d8) when rolling for corruption or patron taint.
-Luck burned to change rolls or avoid corruption is permanent.</p>
-<p><strong>Heal Luck</strong> as Thief</p>
-<p><strong>Thieves&rsquo;Cant </strong>No but does know a Dark Elf dialect of Elven that has a
+Luck burned to avoid corruption is permanent.</p>
+<p>**Languages ** Knows a Dark Elf dialect of Elven that has a
 DC 15 Int check chance of being understood by an Elf. Standard Elven is
 the most likely third language known and DC 15 to understand if not.</p>
 <p><strong>Vulnerability</strong> Prolonged contact with iron causes 4hp damage per day
-and -1d on all rolls. Damage from iron weapons causes an additional 1d3
-points of damage.</p>
+and -1d on all rolls. Damage from iron weapons causes an additional 1
+point of damage.</p>
+<h3 class="breakbefore" id="dark-elf-table">Dark Elf Table</h3>
+<table>
+<thead>
+<tr>
+<th>Lvl</th>
+<th>Atk</th>
+<th>Crit</th>
+<th>Action Dice</th>
+<th>Luck Die</th>
+<th>Ref</th>
+<th>Fort</th>
+<th>Will</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>+0</td>
+<td>1d8/II</td>
+<td>1d20</td>
+<td>1 point</td>
+<td>+1</td>
+<td>+1</td>
+<td>+0</td>
+</tr>
+<tr>
+<td>2</td>
+<td>+1</td>
+<td>1d10/II</td>
+<td>1d20</td>
+<td>d3</td>
+<td>+1</td>
+<td>+2</td>
+<td>+0</td>
+</tr>
+<tr>
+<td>3</td>
+<td>+2</td>
+<td>1d12/II</td>
+<td>1d20</td>
+<td>d4</td>
+<td>+1</td>
+<td>+2</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>4</td>
+<td>+2</td>
+<td>1d14/II</td>
+<td>1d20</td>
+<td>d5</td>
+<td>+2</td>
+<td>+3</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>5</td>
+<td>+3</td>
+<td>1d16/II</td>
+<td>1d20</td>
+<td>d5</td>
+<td>+2</td>
+<td>+4</td>
+<td>+1</td>
+</tr>
+<tr>
+<td>6</td>
+<td>+4</td>
+<td>1d20/II</td>
+<td>1d20+1d14</td>
+<td>d6</td>
+<td>+2</td>
+<td>+4</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>7</td>
+<td>+5</td>
+<td>1d24/II</td>
+<td>1d20+1d16</td>
+<td>d7</td>
+<td>+3</td>
+<td>+5</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>8</td>
+<td>+5</td>
+<td>1d30/II</td>
+<td>1d20+1d20</td>
+<td>d7</td>
+<td>+3</td>
+<td>+5</td>
+<td>+2</td>
+</tr>
+<tr>
+<td>9</td>
+<td>+6</td>
+<td>1d30+2/II</td>
+<td>1d20+1d20</td>
+<td>d8</td>
+<td>+3</td>
+<td>+6</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>10</td>
+<td>+7</td>
+<td>1d30+4/II</td>
+<td>1d20+1d20</td>
+<td>d10</td>
+<td>+4</td>
+<td>+6</td>
+<td>+3</td>
+</tr>
+</tbody>
+</table>
+<h3 id="dark-elf-skills">Dark Elf Skills</h3>
+<table>
+<thead>
+<tr>
+<th>Skill</th>
+<th>1</th>
+<th>2</th>
+<th>3</th>
+<th>4</th>
+<th>5</th>
+<th>6</th>
+<th>7</th>
+<th>8</th>
+<th>9</th>
+<th>10</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Backstab</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+11</td>
+<td>+12</td>
+<td>+13</td>
+<td>+14</td>
+<td>+15</td>
+</tr>
+<tr>
+<td>Sneak silently*</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+11</td>
+<td>+12</td>
+<td>+13</td>
+<td>+14</td>
+<td>+15</td>
+</tr>
+<tr>
+<td>Hide in shadows*</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+11</td>
+<td>+12</td>
+<td>+13</td>
+<td>+14</td>
+<td>+15</td>
+</tr>
+<tr>
+<td>Climb sheer surfaces</td>
+<td>+1</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+10</td>
+<td>+11</td>
+<td>+12</td>
+<td>+13</td>
+</tr>
+<tr>
+<td>Find trap</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+11</td>
+<td>+12</td>
+<td>+13</td>
+<td>+14</td>
+<td>+15</td>
+</tr>
+<tr>
+<td>Handle poison</td>
+<td>+0</td>
+<td>+1</td>
+<td>+3</td>
+<td>+5</td>
+<td>+7</td>
+<td>+8</td>
+<td>+9</td>
+<td>+10</td>
+<td>+11</td>
+<td>+12</td>
+</tr>
+</tbody>
+</table>
 </section>
 <section class="">
 <h2 id="halfling-pipeweed">Halfling Pipeweed</h2>
@@ -843,9 +1041,9 @@ They use their full movement to roll right up to the enemy and burst upon taking
 <section>
 <h2 id="mechanaut">Mechanaut</h2>
 <div class="">
-<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +3 melee (1d12+3), Bash +6 melee (1d6 + bash); AC 18; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, omnivision, immune to critical hits; SV Fort +10, Ref +1, Will +6; AL N</p>
+<p><strong>Mechanaut:</strong> Init +2; Atk Great Sword +3 melee (1d12+3), Bash +6 melee (1d6 + bash); AC 18; HD 4d12; HP 26; MV 35&rsquo;; Act 2d20; SP Shock Armor, bash, omnivision, immune to critical hits except to head; SV Fort +10, Ref +1, Will +6; AL N</p>
 <p>A large, plate armor knight.
-A small creature in the head controls this mechanical armor.
+A small creature in the head is visiting this planet and controls this mechanical armor.
 All joints can rotate 360°.</p>
 <p>Usually attacks with a <em>bash</em> followed by a sword strike to the prone enemy.
 If the armor is killed, the head disconnects and flies away. </p>
@@ -854,10 +1052,6 @@ If the armor is killed, the head disconnects and flies away. </p>
 <!-- {: .breakbefore} -->
 </div>
 </div>
-</section>
-<section></section>
-<section class="clean">
-<p>Last page</p>
 </section>
 <section class="clean">
 <p>inside back cover</p>
