--- a/output.html
+++ b/output.html
@@ -410,9 +410,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 </tbody>
 </table>
-</section>
-<section class="clean">
-<p>Paladin Image</p>
+<p class="breakbefore">Paladin Image </p>
 </section>
 <section class="">
 <h2 id="anti-paladin">Anti-Paladin</h2>
@@ -599,9 +597,7 @@ for 1 round. Your armor class is reduced by the same amount.</p>
 </tr>
 </tbody>
 </table>
-</section>
-<section class="clean">
-<p>Anti-Paladin Image</p>
+<p class="breakbefore">Anti-Paladin Image</p>
 </section>
 <section class="">
 <h2 id="dark-elf"><strong>Dark Elf</strong></h2>
